--- a/Documents/final year project /project/backend/package.json
+++ b/Documents/final year project /project/backend/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "backend",
+  "name": "tourism-sales-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend API for Tourism Sales Prediction System",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "node server.js"
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
+  "keywords": ["tourism", "sales", "prediction", "machine-learning"],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.15.1",
-    "sequelize": "^6.37.7"
+    "dotenv": "^16.3.1",
+    "sequelize": "^6.32.1",
+    "mysql2": "^3.6.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "concurrently": "^9.2.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.0.1"
   }
 }
